apps/media/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  labels:
    name: radarr
spec:
  tls:
    - hosts:
        - radarr.internal.vkolobara.com
  rules:
    - host: radarr.internal.vkolobara.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: radarr
                port:
                  number: 7878
